Bug 257007 - memory leaks in attachedpictureframe.cpp
Summary: memory leaks in attachedpictureframe.cpp
Status: RESOLVED FIXED
Alias: None
Product: taglib
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.6.3
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: Scott Wheeler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-15 19:16 UTC by Martin Tofall
Modified: 2011-01-08 12:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Tofall 2010-11-15 19:16:52 UTC
Version:           1.6.3
OS:                All

The constructor
AttachedPictureFrameV22::AttachedPictureFrameV22(const ByteVector &data, Header *h)
allocates a new object
d = new AttachedPictureFramePrivate;
overwriting the previosuly allocated one (by AttachedPictureFrame::AttachedPictureFrame() : Frame("APIC"))
thus leaking memory. It then goes on to call
setHeader(newHeader, false);
which does not deallocate the previously set header, leaking memory again.

Reproducible: Always
Comment 1 Lukáš Lalinský 2011-01-08 12:16:00 UTC
SVN commit 1212871 by lalinsky:

Fix memory leak in AttachedPictureFrameV22

BUG:257007


 M  +1 -3      attachedpictureframe.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1212871