Fix memory leak in AttachedPictureFrameV22

BUG:257007


git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/kdesupport/taglib@1212871 283d02a7-25f6-0310-bc7c-ecb5cbfe19da